# KUNAI-static-analyzer

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: KUNAI.cmake
dalvik-disassembler/: CMakeLists.txt
kunai-lib/: CMakeLists.txt
